--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,10 @@
         <artifactId>selenium-java</artifactId>
         <version>3.0.1</version>
     </dependency> 
+    <dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.2</version>
+	</dependency>
   </dependencies>
 </project>
